--- a/app/assets/stylesheets/modules/home/_sidebar.scss
+++ b/app/assets/stylesheets/modules/home/_sidebar.scss
@@ -1,5 +1,5 @@
 .sidebar {
-  @include span-columns(3, 12);
+  @include span-columns(4, 12);
   
   .search {
     margin-bottom:5px;
@@ -18,15 +18,16 @@
     .title {
       font-family: 'Lato', sans-serif;
       font-size:25px;
-      font-weight:300;
+      font-weight:400;
       margin-bottom:15px;
     }
     .articles {
+      padding:10px;
       .article {
         font-family: 'Lato', sans-serif;
-        font-weight: 400;
-        font-size:14px;
-        margin-bottom:10px;
+        font-weight: 300;
+        font-size:15px;
+        margin-bottom:15px;
         a {
           color:#333;
           text-decoration:none;
